<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_layout_margin"
        android:layout_marginRight="@dimen/fragment_layout_margin"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Российско Таджикский Славянский Университет имени Петра Первого и Второго"
        android:gravity="center"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_detail_coordinates"
        style="@style/detail_button"
        android:text="@string/item_detail_coordinates"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/item_detail_name"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_detail_phone_number"
        style="@style/detail_button"
        android:layout_below="@+id/item_detail_coordinates"
        android:layout_centerHorizontal="true"
        android:text="@string/item_detail_phone_number"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_detail_email"
        style="@style/detail_button"
        android:text="@string/item_detail_email"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/item_detail_phone_number"
        />

    <TextView
        android:id="@+id/item_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_detail_email"
        android:layout_marginLeft="@dimen/fragment_layout_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/fragment_layout_margin"
        android:text="@string/lorem_ipsum"
        />

</RelativeLayout>